[package]
name = "dispendik_compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
eframe = { version = "0.19.0", features = ["dark-light"] }
egui_extras = "0.19.0"
futures = "0.3.24"
image = { version = "0.24.4", features = ["rgb"] }
rfd = "0.10.0"
similar = "2.2.0"
simple_excel_writer = "0.2.0"
thiserror = "1.0.36"
