[package]
name = "dispendik_compare"
authors = ["Rizal Achmad Pahlevi <https://github.com/RizalAchp>"]
version = "0.1.0"
edition = "2021"
build="build.rs"
description = "Simple Rust Application to Compare and Get Differentioal from 2 File Excel or Csv"
repository = "https://github.com/RizalAchp/CompareExcel"
homepage = "https://github.com/RizalAchp/CompareExcel"
license-file = "LICENSE.rtf"
readme = "README.md"
categories = ["GUI", "Parsing tools", "Text processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
simple_excel_writer = "0.2.0"
csv = "1.1.6"
eframe = { version = "0.19.0", features = ["dark-light"] }
egui_extras = "0.19.0"
futures = "0.3.24"
image = { version = "0.24.4", features = ["rgb"] }
rfd = "0.10.0"
similar = "2.2.0"
thiserror = "1.0.36"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
winapi = {version = "*", features =["winnt"]}
